@@ -14,20 +14,36 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-node{
-  ws{
-    checkout scm
-    sh "git remote set-url origin git@github.com:fabric8io/kubernetes-model.git"
+@Library('github.com/fabric8io/fabric8-pipeline-library@master')
+def dummy
+clientsTemplate{
+  def parameters = ['javaOptions':'-Duser.home=/root/ -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms10m -Xmx1024m']
+  mavenNode(parameters) {
+    ws{
+      checkout scm
+      readTrusted 'release.groovy'
+      if (env.BRANCH_NAME.startsWith('PR-')){
+        echo 'Running CI pipeline'
+        container(name: 'maven') {
+          sh 'mvn -version'
+          sh 'java -version'
+          sh 'mvn clean install'
+        }
+      } else if (env.BRANCH_NAME.equals('master')){
+        echo 'Running CD pipeline'
+        sh "git remote set-url origin git@github.com:fabric8io/kubernetes-model.git"
 
-    def pipeline = load 'release.groovy'
+        def pipeline = load 'release.groovy'
 
-    stage 'Stage'
-    def stagedProject = pipeline.stage()
+        stage 'Stage'
+        def stagedProject = pipeline.stage()
 
-    stage 'Approve'
-    pipeline.approveRelease(stagedProject)
+        stage 'Promote'
+        pipeline.release(stagedProject)
 
-    stage 'Promote'
-    pipeline.release(stagedProject)
+        stage 'Update downstream dependencies'
+        pipeline.updateDownstreamDependencies(stagedProject)
+      }
+    }
   }
 }
